--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Greeting card</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+  <main>
+    <div class="content">
+      <canvas id=c></canvas>
+    </div>
+    <script src="/js/fw.js"></script>
+    <div class="audio">
+      <audio controls="controls" autoplay="autoplay">
+        <source  src="1579198406_irina-allegrova-s-dnem-rozhdeniya.mp3" type="audio/mp3">
+      </audio>
+    </div>
+  </main>
+</body>
+</html>
 
