--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
       <canvas id=c></canvas>
     </div>
-    <script src="/js/fw.js"></script>
+    <script src="js/fw.js"></script>
     <div class="audio">
       <audio controls="controls" autoplay="autoplay">
         <source  src="1579198406_irina-allegrova-s-dnem-rozhdeniya.mp3" type="audio/mp3">
